v4.2.13 (work-in-progress)
     * Make the Python Histogram classes returned by the MiniMC framework much
       more feature complete, adding several features intended to make
       subsequent data analysis easier.
     * Split out and mature the results objects actually returned by the MiniMC
       framework in the Python API.
     * Fix several issues in the C++ templates used to implement the histograms
       used by the MiniMC framework. These issues all concerned features not
       actually used by the MiniMC in past releases (fixes github issue #300).
     * Minor bugfix in histogram objects returned by the MiniMC framework. The
       integrate(..) method of these objects now supports integration to include
       the last bin.
     * Add small unscientific but completely reproducible RNG for Python unit
       tests.
     * Add comprehensive (>99% coverage) unit test for python histograms.
     * NCRandUtils.hh: Add randPointInUnitCircle utility.
     * Add testing utilities for easy monitoring that MiniMC output for a
       particular cfg-string does not change in a statistically significant
       manner. This includes utilities for easy inspection and maintenance of
       the tests in case of detected discrepancies.
     * Add ChiSquared-CDF approximation functions, needed for histogram
       comparisons to yield approximate p-values without introducing a new
       dependency like scipy.
     * Fix flawed asserts preventing proper MiniMC usage in debug builds.
     * ...

v4.2.12 2026-01-05
     * Support spglib release 2.7.0 which changed module names and error
       handling. For now, we still support older spglib releases (back to
       2.1.0).
     * Bump end-year in copyright statements to 2026.

v4.2.10 2025-10-20
     * Add doInfo, doScatter, and doAbsorption flags to the NCMATComposer.load
       method (github issue #280).
     * Add more dedicated unit tests for NCMATComposer.